--- a/ROS/e_nose_raw_publisher/package.xml
+++ b/ROS/e_nose_raw_publisher/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>e_nose</name>
+  <name>e_nose_raw_publisher</name>
   <version>0.5.0</version>
   <description>The e_nose package</description>
 
